Add draft overview page with battle banner
